2011-01-31  Janus Weil  <janus@gcc.gnu.org>

PR fortran/47463
	* resolve.c (resolve_typebound_subroutine): Bug fix for the case of
	an argument of a typebound assignment being a component.


2011-01-31  Janus Weil  <janus@gcc.gnu.org>

	PR fortran/47463
	* gfortran.dg/typebound_assignment_1.f03: New.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@169443 138bc75d-0d04-0410-961f-82ee72b054a4